<resources>
    <string name="app_name">ProjectSTPMS</string>
    <string name="main">Главная</string>
    <string name="category">Категория</string>
    <string name="Сhange">Выберете категорию</string>
    <string name="Welcome">Добро пожаловать в приложение</string>
    <string name="Voice">Голосовые заметки</string>
    <string name="AllNote">Все заметки</string>
    <string name="add_info">Дополнительная информация</string>
    <string name="about_app">О приложении</string>
    <string name="diagram">Диаграмма</string>
    <string name="create_new_category">Создать новую категорию</string>
    <string name="enter_name_category">Введите название категории</string>
    <string name="enter">Добавить</string>
    <string name="save">Cохранить</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="by_pavel_rudenia">by Pavel Rudenia</string>
    <string name="copyright">    © Руденя Павел, 2021</string>
    <string name="task">Задание:Голосовые заметки.           Приложение позволяет записать голос и сохранить его, представить в виде текста. Используйте цвета для разных типов заметок, время и дату создания. Предусмотрите сортировку и удаление не нужных. </string>
    <string name="Voice2">ГОЛОСОВЫЕ ЗАМЕТКИ</string>
    <string name="text">[Здесь появится ваша заметкTYUJKJа]</string>

</resources>